Add password reset
Add password reset with email
Add environment setting to the config file
Add session messages
Add 'all' option to the middleware
Add 'Model' suffix to model classes
Code refactoring
Views reorganization
Add 403 error page view
Small other changes

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
             "core\\": "core/"
         },
         "files": [
-            "config/config.php",
-            "config/db.php"
+            "config/config.php"
         ]
     },
     "authors": [
@@ -21,6 +20,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^8.2"
+        "php": "^8.2",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
